name:               asbi-sh
version:            0.2.0.0
synopsis:           Website for asbi.sh
description:        Please see README.md
license-file:       LICENSE
author:             asbish
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  ghc-options:      -threaded -Wall -fwarn-tabs
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , hakyll == 4.12.5.2
                  , containers
                  , regex-tdfa
                  , unordered-containers
