name:               asbi-sh
version:            0.2.0.0
synopsis:           Website for asbi.sh
description:        Website for asbi.sh
license:            BSD3
license-file:       LICENSE
author:             asbish
category:           Web
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  ghc-options:      -threaded -Wcompat -Wall -fwarn-tabs
  default-language: Haskell2010
  build-depends:    base == 4.*
                  , hakyll
                  , pandoc
                  , pandoc-types
                  , filepath
                  , text
                  , vector
                  , yaml
                  , containers
                  , regex-tdfa
                  , unordered-containers
